Fix bug; finish logic