@@ -6,32 +6,51 @@ import move.Move;
 import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Optional;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 public class Board {
 
+    private static final int DEFAULT_SIZE = 4;
     private static final int EMPTY = 0;
+
+    private static Optional<Board> boardOptional = Optional.empty();
 
     private final int maxNumber;
     private final Random random;
     private final int[][] grid;
 
     private State state;
+    private int emptyCells;
 
-    public Board(final int maxNumber, final int size) {
+    private Board(final int maxNumber, final int size) {
         this.maxNumber = maxNumber;
         this.random = new Random();
         grid = new int[size][size];
 
         state = State.PLAY;
+        emptyCells = size * size;
+    }
+
+    public static Board getInstance(final int maxNumber) {
+        if (boardOptional.isEmpty()) {
+            boardOptional = Optional.of(new Board(maxNumber, DEFAULT_SIZE));
+        }
+
+        return boardOptional.orElseThrow();
     }
 
     public void addRandomNumbers(final int count) {
+        if (allCellsAreFilled()) {
+            return;
+        }
+
         for (int i = 1; i <= count; i++) {
             while (true) {
                 int r = random.nextInt(grid.length);
                 int c = random.nextInt(grid.length);
-                if (grid[r][c] != EMPTY) {
+                if (grid[r][c] == EMPTY) {
                     grid[r][c] = 2;
                     break;
                 }
@@ -42,18 +61,18 @@ public class Board {
     public void handleMove(final Move move) {
         // TODO dejan: refactor into strategy pattern
         switch (move) {
-            case UP -> {
+            case UP: {
                 for (int c = 0; c < grid.length; c++) {
                     final LinkedList<Integer> queue = new LinkedList<>();
                     for (int r = 0; r < grid.length; r++) {
-                        if (grid[c][r] == EMPTY) {
+                        if (grid[r][c] == EMPTY) {
                             continue;
                         }
 
-                        if (queue.isEmpty() || queue.getLast() != grid[c][r]) {
-                            queue.add(grid[c][r]);
+                        if (queue.isEmpty() || queue.getLast() != grid[r][c]) {
+                            queue.add(grid[r][c]);
                         } else {
-                            queue.add(queue.removeLast() + grid[c][r]);
+                            queue.add(queue.removeLast() + grid[r][c]);
                         }
                     }
                     while (queue.size() < grid.length) {
@@ -64,19 +83,20 @@ public class Board {
                         grid[r][c] = queue.removeFirst();
                     }
                 }
+                break;
             }
-            case DOWN -> {
+            case DOWN: {
                 for (int c = 0; c < grid.length; c++) {
                     final LinkedList<Integer> queue = new LinkedList<>();
                     for (int r = grid.length - 1; r >= 0; r--) {
-                        if (grid[c][r] == EMPTY) {
+                        if (grid[r][c] == EMPTY) {
                             continue;
                         }
 
-                        if (queue.isEmpty() || queue.getLast() != grid[c][r]) {
-                            queue.add(grid[c][r]);
+                        if (queue.isEmpty() || queue.getLast() != grid[r][c]) {
+                            queue.add(grid[r][c]);
                         } else {
-                            queue.add(queue.removeLast() + grid[c][r]);
+                            queue.add(queue.removeLast() + grid[r][c]);
                         }
                     }
                     while (queue.size() < grid.length) {
@@ -87,12 +107,13 @@ public class Board {
                         grid[r][c] = queue.removeFirst();
                     }
                 }
+                break;
             }
-            case LEFT -> {
+            case LEFT: {
                 for (int r = 0; r < grid.length; r++) {
                     final LinkedList<Integer> queue = new LinkedList<>();
                     for (int c = 0; c < grid.length; c++) {
-                        if (grid[c][r] == EMPTY) {
+                        if (grid[r][c] == EMPTY) {
                             continue;
                         }
 
@@ -110,12 +131,13 @@ public class Board {
                         grid[r][c] = queue.removeFirst();
                     }
                 }
+                break;
             }
-            case RIGHT -> {
+            case RIGHT: {
                 for (int r = 0; r < grid.length; r++) {
                     final LinkedList<Integer> queue = new LinkedList<>();
                     for (int c = grid.length - 1; c >= 0; c--) {
-                        if (grid[c][r] == EMPTY) {
+                        if (grid[r][c] == EMPTY) {
                             continue;
                         }
 
@@ -133,10 +155,63 @@ public class Board {
                         grid[r][c] = queue.removeFirst();
                     }
                 }
+                break;
+            }
+            default: {
             }
         }
 
-        // TODO dejan: check win / lose condition
+        countEmptyCells();
+        checkWinCondition();
+        checkLoseCondition();
+    }
+
+    private void checkLoseCondition() {
+        if (loseConditionFulfilled()) {
+            state = State.LOSE;
+        }
+    }
+
+    private void checkWinCondition() {
+        for (int i = 0; i < grid.length; i++) {
+            for (int j = 0; j < grid.length; j++) {
+                if (winConditionFulfilledInCell(i, j)) {
+                    state = State.WIN;
+                    break;
+                }
+            }
+        }
+    }
+
+    private boolean winConditionFulfilledInCell(int i, int j) {
+        return grid[i][j] >= maxNumber;
+    }
+
+    private void countEmptyCells() {
+        emptyCells = 0;
+        for (int i = 0; i < grid.length; i++) {
+            for (int j = 0; j < grid.length; j++) {
+                if (grid[i][j] == EMPTY) {
+                    emptyCells++;
+                }
+            }
+        }
+    }
+
+    private boolean loseConditionFulfilled() {
+        return !isWinState() && allCellsAreFilled();
+    }
+
+    private boolean allCellsAreFilled() {
+        return emptyCells == 0;
+    }
+
+    public boolean isWinState() {
+        return State.WIN.equals(state);
+    }
+
+    public boolean isLoseState() {
+        return State.LOSE.equals(state);
     }
 
     public State getState() {
@@ -149,7 +224,7 @@ public class Board {
         for (int[] row : grid) {
             final List<String> arrayConvertedToList = Arrays.stream(row)
                 .mapToObj(this::convertNumberForFormatting)
-                .toList();
+                .collect(Collectors.toList());
             sb.append(String.join(" ", arrayConvertedToList));
             sb.append(System.lineSeparator());
         }
